# MoguTDA

./: .gitignore  .readthedocs.yaml  .travis.yml  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.circleci/: config.yml
.github/workflows/: publish-to-pypi.yml
docs/: Makefile  blogs.rst  conf.py  history.rst  index.rst  install.rst  links.rst  make.bat  news.rst  refs.rst  requirements.txt  tutorial.rst
mogutda/: __init__.py  abssimcomplex.py  alphacomplex.py  utils.py  vrcomplex.py
src/mogutda/: __init__.py  abssimcomplex.py  vrcomplex.py
test/: __init__.py  test_simcomplex.py
